--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img src="A.png" alt="A">
     <img src="MX.png" alt="MX">
     <img src="Whois.png" alt="Whois">
+    <img src="FileZ.png" alt="Filezilla">
 </body>
 </html>
